--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,14 +6,25 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="20dp"
+    android:background="@color/colorBackgroundForm"
     tools:context=".LoginActivity">
 
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="350dp"
+        android:layout_height="160dp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="1dp"
+        app:srcCompat="@drawable/icon_user" />
 
     <EditText
         android:id="@+id/edtTextMail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:drawableLeft="@drawable/icon_email"
+        android:inputType="textEmailAddress"
         android:hint="Correo"/>
 
     <EditText
@@ -21,6 +32,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:drawableLeft="@drawable/icon_lock"
+        android:inputType="textPassword"
         android:hint="Contraseña"/>
 
 
@@ -34,9 +47,17 @@
             android:id="@+id/btnLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Iniciar Sesion"
-            android:background="@color/colorAccent"
-            />
+            android:background="@color/colorLogin"
+            android:text="Iniciar Sesion" />
+
+        <Button
+            android:id="@+id/btnSendToResetPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:background="@android:color/holo_green_dark"
+            android:text="¿Olvidaste tu contraseña?"
+            android:textColor="@android:color/white" />
 
     </LinearLayout>
 </LinearLayout>
