--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,26 +6,41 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="20dp"
+    android:background="@color/colorBackground"
     tools:context=".MainActivity">
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="350dp"
+        android:layout_height="160dp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="1dp"
+        app:srcCompat="@drawable/usuario" />
 
     <EditText
         android:id="@+id/edtTextName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/ic_user"
+        android:inputType="text"
         android:hint="Nombre"/>
 
     <EditText
         android:id="@+id/edtTextMail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
+        android:drawableLeft="@drawable/icon_email"
+        android:inputType="textEmailAddress"
         android:hint="Correo"/>
 
     <EditText
         android:id="@+id/edtTextPwd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
+        android:drawableLeft="@drawable/icon_lock"
+        android:inputType="textPassword"
         android:hint="Contraseña"/>
 
 
@@ -34,14 +49,14 @@
         android:layout_height="match_parent"
         android:gravity="bottom"
         android:orientation="vertical">
-        
+
         <Button
             android:id="@+id/btnRegister"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Registrar Usuario"
-            android:background="@color/colorAccent"
-            />
+            android:layout_marginTop="5dp"
+            android:background="@android:color/holo_blue_light"
+            android:text="Registrar Usuario" />
 
         <Button
             android:id="@+id/btnLogin"
@@ -49,6 +64,7 @@
             android:layout_height="wrap_content"
             android:text="Iniciar Sesión"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp"
             android:background="@color/colorLogin"/>
 
     </LinearLayout>
