--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -8,6 +8,20 @@
     android:gravity="center"
     tools:context=".ProfileActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_height="wrap_content">
+    <ImageView
+        android:id="@+id/imageViewUser"
+        android:layout_width="236dp"
+        android:layout_height="270dp"
+        android:layout_marginTop="5dp"
+        app:srcCompat="@drawable/icon_user"
+        android:contentDescription="TODO" />
+
+    </LinearLayout>
     <TextView
         android:id="@+id/textViewName"
         android:layout_width="wrap_content"
